--- a/popup.html
+++ b/popup.html
@@ -23,7 +23,7 @@
     </div>
 
     <div id="options">
-      <a href="chrome-extension://hgiomgbidjplfacclpodioagcgfbmnlh/options.html" target="_blank">Options</a>
+       <p>Options</p>
     </div>
     
     
